--- a/ecommerce-api-ts/package.json
+++ b/ecommerce-api-ts/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+  "dev": "ts-node-dev --respawn src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,10 +28,6 @@
     "typescript": "^5.9.3"
   }
 
-  "scripts": {
-  "dev": "ts-node-dev --respawn src/index.ts",
-  "build": "tsc",
-  "start": "node dist/index.js"
-}
+  
 
 }
