--- a/ecommerce-api-ts/.env
+++ b/ecommerce-api-ts/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/CRUDKlab
+MONGODB_URI=mongodb://localhost:27017/ecommerce
 PORT=3000
+JWT_SECRET=your_jwt_secret_key_here
