--- a/ecommerce-api-ts/package.json
+++ b/ecommerce-api-ts/package.json
@@ -21,6 +21,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/uuid": "^10.0.0",
