connected the dotenv and controllers

--- a/ecommerce-api-ts/.env
+++ b/ecommerce-api-ts/.env
@@ -1,8 +1,8 @@
 MONGODB_URI=mongodb://localhost:27017/ecommerce
 PORT=3000
 JWT_SECRET=your_jwt_secret_key_here
-
-EMAIL_HOST=smtp.gmail.com       # was E_HOST → should match nodemailer
-EMAIL_PORT=587                  # was SMPT_PORT → typo, should be EMAIL_PORT
-EMAIL_USER=
-EMAIL_PASS=#drnhhsmwhjsgddyo
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=graceniyigena34@gmail.com
+EMAIL_PASS=drnhhsmwhjsgddyo
+FRONTEND_URL=http://localhost:3000
