--- a/ecommerce-api-ts/.env
+++ b/ecommerce-api-ts/.env
@@ -3,6 +3,6 @@ PORT=3000
 JWT_SECRET=your_jwt_secret_key_here
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=graceniyigena34@gmail.com
-EMAIL_PASS=drnhhsmwhjsgddyo
+EMAIL_USER=
+EMAIL_PASS=
 FRONTEND_URL=http://localhost:3000
